--- a/index.html
+++ b/index.html
@@ -54,13 +54,13 @@ div.dataTables_info {
         <div style="padding-bottom: 10px;">
           <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#staticBackdrop"><span data-bs-toggle="tooltip" data-bs-placement="top"
             data-bs-custom-class="custom-tooltip"
-            data-bs-title="Al precionar este boton se abrira la ventana para ingresar materiales">Ingreso de Materiales</span></button>
+            data-bs-title="Al presionar este boton se abrira la ventana para ingresar materiales">Ingreso de Materiales</span></button>
           <button type="button"  class="btn btn-success" data-bs-toggle="modal" data-bs-target="#staticBackdrop2"><span id="botonsalida" data-bs-placement="top"
             data-bs-custom-class="custom-tooltip2"
-            data-bs-title="Al precionar este boton se abrira la ventana para el despacho de materiales" data-bs-toggle="tooltip">  Salida de Materiales</span></button>     
+            data-bs-title="Al presionar este boton se abrira la ventana para el despacho de materiales" data-bs-toggle="tooltip">  Salida de Materiales</span></button>     
           <button type="button" class="btn btn-dark" data-bs-toggle="modal" data-bs-target="#staticBackdrop3" ><span data-bs-toggle="tooltip" data-bs-placement="top"
             data-bs-custom-class="custom-tooltip"
-            data-bs-title="Al precionar este boton se abrira la ventana para ver los registros de ingreso y salida de materiales">Ver Registros</span> </button>       
+            data-bs-title="Al presionar este boton se abrira la ventana para ver los registros de ingreso y salida de materiales">Ver Registros</span> </button>       
             
           </div>
       
